archivo con JavaScript

--- a/index.html
+++ b/index.html
@@ -26,11 +26,7 @@
       <!-- LOGO -->
       <a href="#" class="logo">Carlos Chirito</a>
 
-      <!-- Truco para hacer clic sin usar JavaScript -->
-      <input type="checkbox" name="checkbox" id="menu-toggle">
-      <label for="menu-toggle" class="menu-icon-action">
-        <div class='bx bx-menu' id="menu-icon"></div>
-      </label>
+      <div class='bx bx-menu' id="menu-icon"></div>
 
       
 
@@ -70,5 +66,6 @@
         <a href="#"><i class="ri-arrow-down-double-line"></i></a>
       </div>
 
+      <script src="script.js"></script>
 </body>
 </html>
